--- a/programs.cfg
+++ b/programs.cfg
@@ -12,8 +12,8 @@
 	},
 	["libpack"] = {
 		files = {
-			[":master/libpack/bin"] = "/bin",
-			[":master/libpack/lib"] = "/lib"
+			[":master/libpack/data/bin"] = "/bin",
+			[":master/libpack/data/lib"] = "/lib"
 		},
 		name = "LibPack",
 		description = "Utilities to minify and bundle lua scripts and their 'require' depencencies into a single lua script",
