--- a/.github/workflows/update-dist.yml
+++ b/.github/workflows/update-dist.yml
@@ -82,7 +82,9 @@ jobs:
 
             - uses: actions/checkout@v3
               with:
-                  sparse-checkout: ${{ matrix.program }}
+                  sparse-checkout: | 
+                    .github
+                    ${{ matrix.program }}
 
             - uses: ./.github/actions/lua/install
               if: ${{ matrix.minified }}
