--- a/.github/workflows/update-dist.yml
+++ b/.github/workflows/update-dist.yml
@@ -83,15 +83,15 @@ jobs:
             - uses: actions/checkout@v3
               if: ${{ matrix.minified }}
               with:
-                  sparse-checkout: | 
-                    .github
-                    libpack
-                    ${{ matrix.program }}
+                  sparse-checkout: |
+                      .github
+                      libpack
+                      ${{ matrix.program }}
             - uses: actions/checkout@v3
               if: ${{ !matrix.minified }}
               with:
-                  sparse-checkout: | 
-                    ${{ matrix.program }}
+                  sparse-checkout: |
+                      ${{ matrix.program }}
 
             - uses: ./.github/actions/lua/install
               if: ${{ matrix.minified }}
@@ -167,6 +167,9 @@ jobs:
     update-dist:
         runs-on: ubuntu-latest
         needs: [create-tarballs]
+        permissions:
+            contents: read
+            pull-requests: write
         steps:
             - uses: actions/checkout@v3
 
