--- a/.github/workflows/update-dist.yml
+++ b/.github/workflows/update-dist.yml
@@ -168,7 +168,7 @@ jobs:
         runs-on: ubuntu-latest
         needs: [create-tarballs]
         permissions:
-            contents: read
+            contents: write
             pull-requests: write
         steps:
             - uses: actions/checkout@v3
