--- a/.github/workflows/update-dist.yml
+++ b/.github/workflows/update-dist.yml
@@ -90,6 +90,7 @@ jobs:
                   sparse-checkout: |
                       .github
                       libpack
+                      dist/*.sum
                       ${{ matrix.program }}
             - uses: actions/checkout@v3
               if: matrix.minified == false
