run CPR action even if no artifacts were uploaded

--- a/.github/workflows/update-dist.yml
+++ b/.github/workflows/update-dist.yml
@@ -206,6 +206,7 @@ jobs:
                   path: dist/
 
             - name: Create Pull Request
+              if: always()
               uses: peter-evans/create-pull-request@v5
               with:
                   title: Update Dist Files
