[ci skip] try and fix oppm being weird

--- a/programs.cfg
+++ b/programs.cfg
@@ -12,13 +12,15 @@
 	},
 	["libpack"] = {
 		files = {
-			[":master/libpack/data/bin"] = "/bin",
-			[":master/libpack/data/lib"] = "/lib"
+			[":master/libpack/data/lib"] = "/lib",
+			["master/libpack/data/bin/luascan"] = "/bin",
+			["master/libpack/data/bin/luamin"] = "/bin",
+			["master/libpack/data/bin/luapack"] = "/bin"
 		},
 		name = "LibPack",
 		description = "Utilities to minify and bundle lua scripts and their 'require' depencencies into a single lua script",
 		authors = "usagirei",
 		note = "Library Includes a Lua 5.3 Parser/Tokenizer",
-		repo = "tree/master/libpack/",
+		repo = "tree/master/libpack",
 	}
 }
