[ci skip] add .lua extension

--- a/programs.cfg
+++ b/programs.cfg
@@ -13,9 +13,9 @@
 	["libpack"] = {
 		files = {
 			[":master/libpack/data/lib"] = "/lib",
-			["master/libpack/data/bin/luascan"] = "/bin",
-			["master/libpack/data/bin/luamin"] = "/bin",
-			["master/libpack/data/bin/luapack"] = "/bin"
+			["master/libpack/data/bin/luascan.lua"] = "/bin",
+			["master/libpack/data/bin/luamin.lua"] = "/bin",
+			["master/libpack/data/bin/luapack.lua"] = "/bin"
 		},
 		name = "LibPack",
 		description = "Utilities to minify and bundle lua scripts and their 'require' depencencies into a single lua script",
